# ECOCAR_Firmware_Interface

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  ECOCAR_FIRMWARE_INTERFACE  Makefile  README.md  TC_cmake.cmake  canbus_requirements.md  cmake_install.cmake  demo.md  libserial_interface.py  libtest.py  main.cpp  main.cpp.z  make.sh  monitor.py  read_write.py  serial_example.py  serial_interface.cpp  serial_interface.h  setup.sh  write.py
Communications-Hub_2020_Kate/: Readme.md
Communications-Hub_2020_Kate/include/: canbus.hpp  client.hpp  debug.hpp  message.hpp  preprocess.hpp  variables.hpp
Communications-Hub_2020_Kate/src/: handlers.cpp  message.cpp  variables.cpp
Communications-Hub_2022_Prototype/include/: CircularBuffer.hpp  handlers.hpp  sd_log.hpp  specialfunctions.hpp
Communications-Hub_2022_Prototype/src/: canbus.cpp  client.cpp  main.cpp  sd_log.cpp  sdcard_load_vars.cpp  setup.cpp  specialfunctions.cpp  variable_db.cpp
canbus-interface/: CMakeLists.txt  Makefile  cbi.cpp  cbi.h  cmake_install.cmake  serial_interface.cpp  serial_interface.h  util.cpp  util.h
serial-interface/: CMakeLists.txt  cbi.cpp  cbi.h  serial_interface.cpp  serial_interface.h  util.cpp  util.h
